file printbackend: Protect a callback by GDK_THREADS_ENTER

https://bugzilla.gnome.org/show_bug.cgi?id=649569